repo_on_gitlab/kube_application-master/deployment.yml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: $CI_PROJECT_TITLE
spec:
  selector:
    matchLabels:
      app: $CI_PROJECT_TITLE
  replicas: 2
  template:
    metadata:
      labels:
        app: $CI_PROJECT_TITLE
    spec:
      containers:
      - name: $CI_PROJECT_TITLE
        image: $IMAGE_TAG
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /liveness
            port: 5000
          initialDelaySeconds: 20
          periodSeconds: 4
        readinessProbe:
          httpGet:
            path: /readiness
            port: 5000
