repo_on_gitlab/kube_application-master/service.yml
kind: Service
apiVersion: v1
metadata:
  name: $CI_PROJECT_TITLE
  labels:
    app: $CI_PROJECT_TITLE
spec:
  selector:
    app: $CI_PROJECT_TITLE
  ports:
  - name: web
    port: 5000
