repo_on_gitlab/kube_application-master/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress-$CI_PROJECT_TITLE
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: $CI_PROJECT_TITLE
            port:
              number: 5000
